fixed calendar height and removed scrollbar

--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -1,5 +1,6 @@
 #calendar {
-  margin: 1em;
+  margin: 0.2em;
+  min-height: 500px;
 
   .fc-left {
     h2 {
@@ -9,5 +10,20 @@
   }
   .fc-button {
     font-size: 0.9em;
+  }
+  table {
+    // min-height: 500px;
+  }
+  // .fc-scroller {
+  //   overflow-y: hidden !important;
+  // }
+
+  .fc-day-grid-container.fc-scroller {
+    height: auto!important;
+    overflow-y: auto;
+  }
+
+  .fc-day-header {
+    font-size: 2.1vmax;
   }
 }
